tests/snapshots/cli__autodetect_markdown_file.snap
---
source: tests/cli.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
error[COMMA_PARENTHESIS_WHITESPACE]: Don’t put a space before the full stop.
 --> [path]
  |
6 | ...ges and is free to use, more on that on_ [](https://languagetool.org/)_. __There is a public API (with a free tie...
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use of whitespace before comma and before/after parentheses
  |                                            --------------------------------- help: .
  |
error[WHITESPACE_RULE]: Possible typo: you repeated a whitespace
  --> [path]
   |
11 | ...rs very easily via Rust code! _Crates.io docs.rs codecov- - [](#about) - [](#cli-referenc...
   |                                            ^^^^^^^^^ Whitespace repetition (bad formatting)
   |                                            --------- help:  
   |
error[COMMA_PARENTHESIS_WHITESPACE]: Don’t put a space before the full stop.
  --> [path]
   |
13 | ...on. Installation guidelines can be found [](https://www.docker.com/get-started/). On Linux platforms, you might need to c...
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use of whitespace before comma and before/after parentheses
   |                                            ----------------------------------------- help: .
   |
error[COMMA_PARENTHESIS_WHITESPACE]: Don’t put a space before the full stop.
  --> [path]
   |
14 | ...vent the _sudo privilege issue_ by doing [](https://docs.docker.com/engine/install/linux-postinstall/). ## API Reference  
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use of whitespace before comma and before/after parentheses
   |                                            --------------------------------------------------------------- help: .
   |
error[COMMA_PARENTHESIS_WHITESPACE]: Don’t put a space before the full stop.
 --> [path]
  |
5 | ... or crate, then we recommend reading the [](https://docs.rs/languagetool-rust). To use LanguageTool-Rust in your Rust p...
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Use of whitespace before comma and before/after parentheses
  |                                            --------------------------------------- help: .
  |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
 --> [path]
  |
5 | ...piling LTRS. #### Default Features  - - **cli**: Adds command-line related methods for ...
  |                                            ^^^^^^^ Possible spelling mistake
  |                                            ------- help: CLI, Clip, CGI, CPI, CSI, ... (1506 not shown)
  |
error[FILE_EXTENSIONS_CASE]: File types are normally capitalized.
 --> [path]
  |
8 | ...wing features: **annotate**, **color**, **html**, **markdown**, **multithreaded**, **typ...
  |                                            ^^^^^^^^ Capitalize file extensions
  |                                            -------- help: HTML
  |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
 --> [path]
  |
9 | ...tml**, **markdown**, **multithreaded**, **typst**.  - **native-tls**: Enables TLS functio...
  |                                            ^^^^^^^^^ Possible spelling mistake
  |                                            --------- help: Typst, typist, type, types, test, ... (29 not shown)
  |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
  --> [path]
   |
10 | ...own**, **multithreaded**, **typst**.  - **native-tls**: Enables TLS functionality provided by ...
   |                                            ^^^^^^^^^^^^^^ Possible spelling mistake
   |                                            -------------- help: natives, natively, nativists, nativeness, naivetes
   |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
 --> [path]
  |
3 | ...annotate results from check request.  - **cli-complete**: Adds commands to generate completion f...
  |                                            ^^^^^^^^^^^^^^^^ Possible spelling mistake
  |                                            ---------------- help: incomplete
  |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
 --> [path]
  |
6 | ...shells. This feature also activates the **cli** feature. Enter ltrs completions --help ...
  |                                            ^^^^^^^ Possible spelling mistake
  |                                            ------- help: CLI, clip, CGI, CPI, CSI, ... (1543 not shown)
  |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
  --> [path]
   |
10 | ...es color outputting in the terminal. If **cli** feature is also enabled, the --color=<W...
   |                                            ^^^^^^^ Possible spelling mistake
   |                                            ------- help: CLI, clip, CGI, CPI, CSI, ... (1543 not shown)
   |
error[FILE_EXTENSIONS_CASE]: File types are normally capitalized.
  --> [path]
   |
12 | ...., cli-complete, docker, and undoc).  - **html**: Enables HTML parser utilities.  - **ma...
   |                                            ^^^^^^^^ Capitalize file extensions
   |                                            -------- help: HTML
   |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
  --> [path]
   |
14 | ...d**: Enables multithreaded requests.  - **native-tls-vendored**: Enables the vendored feature of native...
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^ Possible spelling mistake
   |                                            ----------------------- help: native-TLS-vendored
   |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
  --> [path]
   |
17 | ...u are planning to use HTTPS servers.  - **typst**: Enables Typst parser utilities.  - **u...
   |                                            ^^^^^^^^^ Possible spelling mistake
   |                                            --------- help: Typst, typist, type, types, test, ... (29 not shown)
   |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
  --> [path]
   |
19 | ...t**: Enables Typst parser utilities.  - **undoc**: Adds more fields to JSON responses tha...
   |                                            ^^^^^^^^^ Possible spelling mistake
   |                                            --------- help: undo, undock, undos
   |
error[THE_CC]: It appears that a noun is missing after “the”.
  --> [path]
   |
21 | ... JSON responses that are not present in the [](https://languagetool.org/http-api/sw...
   |                                            ^^^ the and
   |                                            ---
   |
error[CONSECUTIVE_SPACES]: It seems like there are too many consecutive spaces here.
  --> [path]
   |
21 | ...ON responses that are not present in the [](https://languagetool.org/http-api/swagger-ui/#!/default/) but might be present in some cases. All ...
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Two consecutive spaces
   |                                            -------------------------------------------------------------- help:  
   |
error[MORFOLOGIK_RULE_EN_US]: Possible spelling mistake found.
  --> [path]
   |
23 | ...cases. All added fields are stored in a hashmap as JSON values.   ## Related Projects  ...
   |                                            ^^^^^^^ Possible spelling mistake
   |                                            ------- help: hash map
   |
